--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "next": "latest",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.1.0",
+    "@types/react": "18.2.5",
+    "typescript": "5.0.4"
   }
 }
