--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "client-only": "^0.0.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
@@ -17,6 +18,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "sass": "^1.62.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
