--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
@@ -24,6 +25,8 @@
   "devDependencies": {
     "@types/node": "20.1.0",
     "@types/react": "18.2.5",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
     "typescript": "5.0.4"
   }
 }
