--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.2.5",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "eslint-config-prettier": "^8.8.0",
     "typescript": "5.0.4"
   }
 }
