--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.2",
     "autoprefixer": "^10.4.14",
     "client-only": "^0.0.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "my-component": "^0.0.0",
     "next": "latest",
     "postcss": "^8.4.23",
     "react": "18.2.0",
