--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "remark-html": "^15.0.2",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "web-vitals": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "20.1.0",
